finaliza api despesas
